<resources>
    <string name="app_name">JoesoftDating</string>
    <string name="first_time_user_message">
        We noticed this is your first login. Make sure to input your preferences in the Settings screen so that we can find
        potential matches.
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tag_fragment_home">Home</string>
    <string name="tag_fragment_conn">Connections</string>
    <string name="tag_fragment_msg">Messages</string>
    <string name="tag_fragment_sts">Settings</string>
    <string name="tag_fragment_profile">View Profile</string>
    <string name="tag_fragment_chat">Chat</string>
    <string name="intent_user">Intent User</string>
    <string name="intent_message">Intent Message</string>
    <string name="status">Status</string>
    <string name="interested_in">Interested in:</string>

    <string name="profile_name">Name:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_gender_default">Male</string>
    <string name="profile_status">Status:</string>
    <string name="profile_status_default">Looking</string>
    <string name="profile_interested_in">Interested In:</string>
    <string name="profile_interested_in_default">Female</string>

    <string name="msg_default_Message">Hello over there</string>
    <string name="msg_default_reply">Reply</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home" />
    <string name="tab_1">Home</string>
    <string name="tab_2">Connections</string>
    <string name="tab_3">messages</string>
    <string name="settings">Settings</string>
    <string name="agreement">Agreement</string>
    <string name="save_settings">Save</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="email_hint">Yourname@yourhost.com</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">254(788)929-775</string>

    <!--Message suggestions-->
    <string-array name="message_suggestions_array">
        <item>Hey</item>
        <item>How\'s it going?</item>
        <item>Hello</item>
        <item>What\'s up</item>
        <item>Want to chat?</item>
        <item>Have you seen my profile</item>
        <item>Want to meet up?</item>
    </string-array>

</resources>
